// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseline styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.text-0\\\\/0 {
  display: block;
  font-size: 14px;
  line-height: 16px;
  transform: translateY(2.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/1 {
  display: block;
  font-size: 14px;
  line-height: 24px;
  transform: translateY(6.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/2 {
  display: block;
  font-size: 14px;
  line-height: 32px;
  transform: translateY(10.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/3 {
  display: block;
  font-size: 14px;
  line-height: 40px;
  transform: translateY(14.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/4 {
  display: block;
  font-size: 14px;
  line-height: 48px;
  transform: translateY(18.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/0 {
  display: block;
  font-size: 16px;
  line-height: 16px;
  transform: translateY(2.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/1 {
  display: block;
  font-size: 16px;
  line-height: 24px;
  transform: translateY(6.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/2 {
  display: block;
  font-size: 16px;
  line-height: 32px;
  transform: translateY(10.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/3 {
  display: block;
  font-size: 16px;
  line-height: 40px;
  transform: translateY(14.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/4 {
  display: block;
  font-size: 16px;
  line-height: 48px;
  transform: translateY(18.181818181818183px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    );
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    display: block;
    font-size: 14px;
    line-height: 16px;
    transform: translateY(2.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    display: block;
    font-size: 14px;
    line-height: 24px;
    transform: translateY(6.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    display: block;
    font-size: 14px;
    line-height: 32px;
    transform: translateY(10.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3 {
    display: block;
    font-size: 14px;
    line-height: 40px;
    transform: translateY(14.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4 {
    display: block;
    font-size: 14px;
    line-height: 48px;
    transform: translateY(18.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    display: block;
    font-size: 16px;
    line-height: 16px;
    transform: translateY(2.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    display: block;
    font-size: 16px;
    line-height: 24px;
    transform: translateY(6.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    display: block;
    font-size: 16px;
    line-height: 32px;
    transform: translateY(10.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3 {
    display: block;
    font-size: 16px;
    line-height: 40px;
    transform: translateY(14.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4 {
    display: block;
    font-size: 16px;
    line-height: 48px;
    transform: translateY(18.181818181818183px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }
}"
`;

exports[`measure styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.text-0\\\\/0 {
  display: block;
  font-size: 14px;
  line-height: 16px;
  transform: translateY(2.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/1 {
  display: block;
  font-size: 14px;
  line-height: 24px;
  transform: translateY(6.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/2 {
  display: block;
  font-size: 14px;
  line-height: 32px;
  transform: translateY(10.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/3 {
  display: block;
  font-size: 14px;
  line-height: 40px;
  transform: translateY(14.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/4 {
  display: block;
  font-size: 14px;
  line-height: 48px;
  transform: translateY(18.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/0 {
  display: block;
  font-size: 16px;
  line-height: 16px;
  transform: translateY(2.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/1 {
  display: block;
  font-size: 16px;
  line-height: 24px;
  transform: translateY(6.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/2 {
  display: block;
  font-size: 16px;
  line-height: 32px;
  transform: translateY(10.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/3 {
  display: block;
  font-size: 16px;
  line-height: 40px;
  transform: translateY(14.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/4 {
  display: block;
  font-size: 16px;
  line-height: 48px;
  transform: translateY(18.181818181818183px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.measure-0 {
  max-width: 15ch;
}

.measure-1 {
  max-width: 20ch;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    display: block;
    font-size: 14px;
    line-height: 16px;
    transform: translateY(2.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    display: block;
    font-size: 14px;
    line-height: 24px;
    transform: translateY(6.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    display: block;
    font-size: 14px;
    line-height: 32px;
    transform: translateY(10.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3 {
    display: block;
    font-size: 14px;
    line-height: 40px;
    transform: translateY(14.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4 {
    display: block;
    font-size: 14px;
    line-height: 48px;
    transform: translateY(18.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    display: block;
    font-size: 16px;
    line-height: 16px;
    transform: translateY(2.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    display: block;
    font-size: 16px;
    line-height: 24px;
    transform: translateY(6.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    display: block;
    font-size: 16px;
    line-height: 32px;
    transform: translateY(10.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3 {
    display: block;
    font-size: 16px;
    line-height: 40px;
    transform: translateY(14.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4 {
    display: block;
    font-size: 16px;
    line-height: 48px;
    transform: translateY(18.181818181818183px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 15ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }
}"
`;

exports[`rhythm styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.text-0\\\\/0 {
  display: block;
  font-size: 14px;
  line-height: 16px;
  transform: translateY(2.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/1 {
  display: block;
  font-size: 14px;
  line-height: 24px;
  transform: translateY(6.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/2 {
  display: block;
  font-size: 14px;
  line-height: 32px;
  transform: translateY(10.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/3 {
  display: block;
  font-size: 14px;
  line-height: 40px;
  transform: translateY(14.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/4 {
  display: block;
  font-size: 14px;
  line-height: 48px;
  transform: translateY(18.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/0 {
  display: block;
  font-size: 16px;
  line-height: 16px;
  transform: translateY(2.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/1 {
  display: block;
  font-size: 16px;
  line-height: 24px;
  transform: translateY(6.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/2 {
  display: block;
  font-size: 16px;
  line-height: 32px;
  transform: translateY(10.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/3 {
  display: block;
  font-size: 16px;
  line-height: 40px;
  transform: translateY(14.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/4 {
  display: block;
  font-size: 16px;
  line-height: 48px;
  transform: translateY(18.181818181818183px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.rhythm-0 > * + * {
  margin-top: 0px;
}

.rhythm-y-0 > * + * {
  margin-top: 0px;
}

.rhythm-x-0 > * + * {
  margin-left: 0px;
}

.rhythm-1 > * + * {
  margin-top: 8px;
}

.rhythm-y-1 > * + * {
  margin-top: 8px;
}

.rhythm-x-1 > * + * {
  margin-left: 8px;
}

.rhythm-2 > * + * {
  margin-top: 16px;
}

.rhythm-y-2 > * + * {
  margin-top: 16px;
}

.rhythm-x-2 > * + * {
  margin-left: 16px;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    display: block;
    font-size: 14px;
    line-height: 16px;
    transform: translateY(2.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    display: block;
    font-size: 14px;
    line-height: 24px;
    transform: translateY(6.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    display: block;
    font-size: 14px;
    line-height: 32px;
    transform: translateY(10.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3 {
    display: block;
    font-size: 14px;
    line-height: 40px;
    transform: translateY(14.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4 {
    display: block;
    font-size: 14px;
    line-height: 48px;
    transform: translateY(18.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    display: block;
    font-size: 16px;
    line-height: 16px;
    transform: translateY(2.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    display: block;
    font-size: 16px;
    line-height: 24px;
    transform: translateY(6.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    display: block;
    font-size: 16px;
    line-height: 32px;
    transform: translateY(10.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3 {
    display: block;
    font-size: 16px;
    line-height: 40px;
    transform: translateY(14.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4 {
    display: block;
    font-size: 16px;
    line-height: 48px;
    transform: translateY(18.181818181818183px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 8px;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 8px;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 8px;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 16px;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 16px;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 16px;
  }
}"
`;

exports[`use px 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.text-0\\\\/0 {
  display: block;
  font-size: 14px;
  line-height: 16px;
  transform: translateY(2.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/1 {
  display: block;
  font-size: 14px;
  line-height: 24px;
  transform: translateY(6.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/2 {
  display: block;
  font-size: 14px;
  line-height: 32px;
  transform: translateY(10.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/3 {
  display: block;
  font-size: 14px;
  line-height: 40px;
  transform: translateY(14.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/4 {
  display: block;
  font-size: 14px;
  line-height: 48px;
  transform: translateY(18.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/0 {
  display: block;
  font-size: 16px;
  line-height: 16px;
  transform: translateY(2.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/1 {
  display: block;
  font-size: 16px;
  line-height: 24px;
  transform: translateY(6.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/2 {
  display: block;
  font-size: 16px;
  line-height: 32px;
  transform: translateY(10.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/3 {
  display: block;
  font-size: 16px;
  line-height: 40px;
  transform: translateY(14.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/4 {
  display: block;
  font-size: 16px;
  line-height: 48px;
  transform: translateY(18.181818181818183px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    );
}

.measure-0 {
  max-width: 15ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0px;
}

.rhythm-y-0 > * + * {
  margin-top: 0px;
}

.rhythm-x-0 > * + * {
  margin-left: 0px;
}

.rhythm-1 > * + * {
  margin-top: 8px;
}

.rhythm-y-1 > * + * {
  margin-top: 8px;
}

.rhythm-x-1 > * + * {
  margin-left: 8px;
}

.rhythm-2 > * + * {
  margin-top: 16px;
}

.rhythm-y-2 > * + * {
  margin-top: 16px;
}

.rhythm-x-2 > * + * {
  margin-left: 16px;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    display: block;
    font-size: 14px;
    line-height: 16px;
    transform: translateY(2.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    display: block;
    font-size: 14px;
    line-height: 24px;
    transform: translateY(6.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    display: block;
    font-size: 14px;
    line-height: 32px;
    transform: translateY(10.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3 {
    display: block;
    font-size: 14px;
    line-height: 40px;
    transform: translateY(14.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4 {
    display: block;
    font-size: 14px;
    line-height: 48px;
    transform: translateY(18.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    display: block;
    font-size: 16px;
    line-height: 16px;
    transform: translateY(2.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    display: block;
    font-size: 16px;
    line-height: 24px;
    transform: translateY(6.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    display: block;
    font-size: 16px;
    line-height: 32px;
    transform: translateY(10.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3 {
    display: block;
    font-size: 16px;
    line-height: 40px;
    transform: translateY(14.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4 {
    display: block;
    font-size: 16px;
    line-height: 48px;
    transform: translateY(18.181818181818183px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 15ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 8px;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 8px;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 8px;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 16px;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 16px;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 16px;
  }
}"
`;

exports[`use rem 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.text-0\\\\/0 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  transform: translateY(0.20779220779220786em);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.7142857142857142;
  transform: translateY(0.49350649350649356em);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571429em );
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/2 {
  display: block;
  font-size: 0.875rem;
  line-height: 2.2857142857142856;
  transform: translateY(0.7792207792207793em);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/3 {
  display: block;
  font-size: 0.875rem;
  line-height: 2.857142857142857;
  transform: translateY(1.064935064935065em);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/4 {
  display: block;
  font-size: 0.875rem;
  line-height: 3.4285714285714284;
  transform: translateY(1.3506493506493507em);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/0 {
  display: block;
  font-size: 1rem;
  line-height: 1;
  transform: translateY(0.13636363636363638em);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/1 {
  display: block;
  font-size: 1rem;
  line-height: 1.5;
  transform: translateY(0.38636363636363635em);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5625em );
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/2 {
  display: block;
  font-size: 1rem;
  line-height: 2;
  transform: translateY(0.6363636363636364em);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/3 {
  display: block;
  font-size: 1rem;
  line-height: 2.5;
  transform: translateY(0.8863636363636364em);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625em );
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/4 {
  display: block;
  font-size: 1rem;
  line-height: 3;
  transform: translateY(1.1363636363636365em);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 1rem;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 0.5rem,
    transparent 0.5rem
    );
}

.measure-0 {
  max-width: 15ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0rem;
}

.rhythm-y-0 > * + * {
  margin-top: 0rem;
}

.rhythm-x-0 > * + * {
  margin-left: 0rem;
}

.rhythm-1 > * + * {
  margin-top: 0.5rem;
}

.rhythm-y-1 > * + * {
  margin-top: 0.5rem;
}

.rhythm-x-1 > * + * {
  margin-left: 0.5rem;
}

.rhythm-2 > * + * {
  margin-top: 1rem;
}

.rhythm-y-2 > * + * {
  margin-top: 1rem;
}

.rhythm-x-2 > * + * {
  margin-left: 1rem;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    display: block;
    font-size: 0.875rem;
    line-height: 1.1428571428571428;
    transform: translateY(0.20779220779220786em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    display: block;
    font-size: 0.875rem;
    line-height: 1.7142857142857142;
    transform: translateY(0.49350649350649356em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571429em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    display: block;
    font-size: 0.875rem;
    line-height: 2.2857142857142856;
    transform: translateY(0.7792207792207793em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3 {
    display: block;
    font-size: 0.875rem;
    line-height: 2.857142857142857;
    transform: translateY(1.064935064935065em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4 {
    display: block;
    font-size: 0.875rem;
    line-height: 3.4285714285714284;
    transform: translateY(1.3506493506493507em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    display: block;
    font-size: 1rem;
    line-height: 1;
    transform: translateY(0.13636363636363638em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    display: block;
    font-size: 1rem;
    line-height: 1.5;
    transform: translateY(0.38636363636363635em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    display: block;
    font-size: 1rem;
    line-height: 2;
    transform: translateY(0.6363636363636364em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3 {
    display: block;
    font-size: 1rem;
    line-height: 2.5;
    transform: translateY(0.8863636363636364em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4 {
    display: block;
    font-size: 1rem;
    line-height: 3;
    transform: translateY(1.1363636363636365em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 15ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0rem;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 0.5rem;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 0.5rem;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 0.5rem;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 1rem;
  }
}"
`;
